# mwclient

./: .coverage  .editorconfig  .flake8  .gitignore  .landscape.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  LICENSE.md  MANIFEST.in  README.md  README.rst  README.txt  REFERENCE.md  REFERENCE.txt  RELEASE-NOTES.md  RELEASE-NOTES.txt  __init__.py  client.py  compatibility.py  errors.py  ex.py  http.py  listing.py  page.py  page_nowriteapi.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml  integration.yml  release.yml  tox.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/development/: index.rst
docs/source/reference/: errors.rst  image.rst  index.rst  page.rst  site.rst
docs/source/user/: connecting.rst  files.rst  implementation-notes.rst  index.rst  page-ops.rst
examples/: basic_edit.py  upload.py
mwclient/: README.txt  REFERENCE.txt  RELEASE-NOTES.txt  __init__.py  _types.py  client.py  compatibility.py  entity.py  errors.py  ex.py  http.py  image.py  listing.py  page.py  page_nowriteapi.py  sleep.py  types.py  upload.py  util.py
simplejson/: __init__.py  _speedups.c  decoder.py  encoder.py  scanner.py  tool.py
simplejson/tests/: __init__.py  test_decode.py  test_default.py  test_dump.py  test_encode_basestring_ascii.py  test_fail.py  test_float.py  test_indent.py  test_pass1.py  test_pass2.py  test_pass3.py  test_recursion.py  test_scanstring.py  test_separators.py  test_unicode.py
test/: __init__.py  integration.py  test_client.py  test_listing.py  test_page.py  test_sleep.py  test_util.py
tests/: basic_edit_test.py  client-test.py  client_test.py  test_client.py  test_listing.py  test_page.py  test_sleep.py  upload_api_test.py
