[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.11.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "setup.py"
search = "version='{current_version}'"
replace = "version='{new_version}'"

[[tool.bumpversion.files]]
filename = "mwclient/client.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "README.md"

[tool.mypy]
packages = ["mwclient", "test"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_calls = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "requests_oauthlib"
ignore_missing_imports = true
